# systemc-2.2.0

./: Makefile.am  Makefile.in  README  configure  configure.in
debian/: libsystemc22-dev.install  systemc22-doc.install
debian/patches/: 10-sc_fxnum-cpp.patch  20-scfx_rep-cpp.patch  60-placeholder-cpp.patch  70-drop-reference-mutables.patch  80-sc_bit_proxies.h.patch  90-autotools.patch
docs/: Makefile.am  Makefile.in
examples/: Makefile.am  Makefile.in
examples/sysc/: Makefile.in
examples/sysc/2.1/: Makefile.in
examples/sysc/2.1/dpipe/: Makefile.in
examples/sysc/2.1/forkjoin/: Makefile.in
examples/sysc/2.1/reset_signal_is/: Makefile.in
examples/sysc/2.1/sc_export/: Makefile.in
examples/sysc/2.1/sc_report/: Makefile.in
examples/sysc/2.1/scx_barrier/: Makefile.in
examples/sysc/2.1/scx_mutex_w_policy/: Makefile.in
examples/sysc/2.1/specialized_signals/: Makefile.in
examples/sysc/fft/: Makefile.in
examples/sysc/fft/fft_flpt/: Makefile.in
examples/sysc/fft/fft_fxpt/: Makefile.in
examples/sysc/fir/: Makefile.in
examples/sysc/pipe/: Makefile.in
examples/sysc/pkt_switch/: Makefile.in
examples/sysc/rsa/: Makefile.in
examples/sysc/simple_bus/: Makefile.in
examples/sysc/simple_fifo/: Makefile.in
examples/sysc/simple_perf/: Makefile.in
src/: Makefile.am  Makefile.in
src/sysc/: Makefile.am  Makefile.in
src/sysc/communication/: Makefile.am  Makefile.in
src/sysc/datatypes/: Makefile.am  Makefile.in
src/sysc/datatypes/bit/: Makefile.am  Makefile.in  sc_bit_proxies.h  sc_proxy.h
src/sysc/datatypes/fx/: Makefile.am  Makefile.in  sc_fxnum.cpp  scfx_rep.cpp  scfx_utils.h
src/sysc/datatypes/int/: Makefile.am  Makefile.in
src/sysc/datatypes/misc/: Makefile.am  Makefile.in
src/sysc/kernel/: Makefile.am  Makefile.in
src/sysc/qt/: Makefile.am  Makefile.in
src/sysc/tracing/: Makefile.am  Makefile.in
src/sysc/utils/: Makefile.am  Makefile.in  sc_utils_ids.cpp
systemc22-2.2.0/debian/: README.Debian  changelog  control  copyright  rules
systemc22-2.2.0/debian/patches/: 30-scfx_utils-h.patch  40-sc_proxy-h.patch  50-sc_utils_ids-cpp.patch  90-autotools.patch
